--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap");
 header {
-  background-color: rgb(224, 43, 43);
   border-radius: 50px;
   display: flex;
   justify-content: space-between;
@@ -28,6 +27,10 @@ img {
   float: inherit;
   border-radius: 400px;
 }
+img:hover {
+  box-shadow: 0 12px 16px 0 rgba(245, 242, 242, 0.24),
+    0 17px 50px 0 rgba(255, 253, 253, 0.19);
+}
 .logo {
   width: 70px;
   float: none;
@@ -38,5 +41,4 @@ img {
 .nav_links li {
   display: inline-block;
   padding: 0px 20px;
-  float: inline-start;
 }
